<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3inaRow</string>
    <string name="action_settings">Settings</string>
    <string name="tictactoe">Tic Tac Toe</string>
    <string name="button_1"></string>
	<string name="button_2"></string>
	<string name="button_3"></string>
	<string name="button_4"></string>
	<string name="button_5"></string>
	<string name="button_6"></string>
	<string name="button_7"></string>
	<string name="button_8"></string>
	<string name="button_9"></string>
	<string name="button_10">Connect</string>
    <string name="X">X</string>
    <string name="O">O</string>

</resources>
